# diamond_rash

./: Board.py  ColorTester.py  Differenciator.py  Solver.py  cropper.py  group.py  groupTester.py  main.py
BoardParser/: CMakeLists.txt  main.cpp
PathFinder/: CMakeLists.txt  main.cpp
PathFinder/AStar/: AStar.cpp
iframe_server/: index.html
utils/: game_setup.py
